--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "export": "next export"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "contentful": "^7.14.6",
-    "next": "10.0.6",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "next": "^12.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.0.0-beta.4",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "12.0.4",
+    "sass": "^1.44.0"
   }
 }
